--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "A First Step into Survival and Competing Risks Analysis with R"
+title: "Outcomes: The Bridge from Data Collection to Analysis"
 format:
   html:
     toc: true
@@ -144,12 +144,11 @@ a:hover {
 </style>
 ```
 
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-
-# Study Design III − A First Step into Survival and Competing Risks Analysis with R
+# Study Design III − Outcomes: The Bridge from Data Collection to Analysis
 
 ::: {.serif-block .text-right}
 Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk, language/writing
@@ -157,352 +156,155 @@ Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk
 
 ------------------------------------------------------------------------
 
-### What exactly is an outcome?
+### アウトカムってなに？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-Me: “Hey Dad, can I pick your brain again?”
+私「さっきのアウトカムについてなんだけどね。診療科内で臨床試験の論文を読むんだけど、そこで出てくる”DFS”とか”RFS”とかの略語もアウトカムだよね？実はよくわからないんだけど、当たり前のように使われているから質問しにくいんだ。DFSとRFS、どっちもがんの再発を調べてるみたいなんだけど。お父さん詳しい？」
 :::
 
 ::: voice-father
-Dad: “That depends. Is there coffee involved?”
+お父さん「もちろん統計解析でDFSを扱うことはあるよ。一番よく出てくるOSは全生存期間（overall survival）だよね。DFSは無病生存期間（disease-free survival）、RFSは無再発生存期間（relapse-free survival）のこと」
 :::
 
 ::: voice-daughter
-Me: “Already poured. So... about outcomes. In journal club, all these abbreviations show up: OS, DFS, RFS, PFS... Everyone talks like they’re obvious, but I’m honestly fuzzy on the details. I know they’re supposed to be outcomes, but what’s really different between things like DFS and RFS? You deal with these all the time, right?” 
+私「無再発生存期間って再発までの日数のこと？」
 :::
 
 ::: voice-father
-Dad: “I do. The one you probably see most is **overall survival (OS)**. Then there’s **disease-free survival (DFS)** and **relapse-free survival (RFS)**.”
-::: 
-
-::: voice-daughter
-Me: “RFS sounds like ‘number of days until relapse’ in my head.”
-:::
-
-::: voice-father
-Dad: “If we literally meant ‘number of days until relapse’, we may call it relapse-free time. You’ll also see terms like **cumulative incidence of relapse (CIR)**.”
+お父さん「再発までの日数だったら無再発期間(relapse-free time)とかって言葉を選ぶかなあ。累積再発率（cumulative incidence of relapse）やCIRって呼ぶことの方が多いけど」
 :::
 
 ::: voice-daughter
-Me: “Acronyms are multiplying, not shrinking. Help.”
+私「よけいにわからん。ぜんぶ同じじゃないの？」
 :::
 
 ::: voice-father
-Dad: “Let’s slow it down. In survival analysis, we’re always looking at **time from some origin to an event**. The twist is what we call an **event**. For DFS, we often count as events:
-:::
-
-- recurrence
-- second primary cancer
-- death
-
-::: voice-father
-We’re asking:  
-> ‘How long do patients stay alive without recurrence and without second cancer?’”
+お父さん「生存間解析ではね、細かいけど違うんだ。再発を経験せずに、死亡することもあるでしょ。無病生存期間のポイントは、再発・2次がん・死亡のうち、**どれか最初のイベントまでの時間**を扱うこと。だから、再発だけでなく、死亡したり別のがんを発症したりしたときも、イベントとして扱われるんだ」
 :::
 
 ::: voice-daughter
-Me: “So if someone gets a second cancer, that’s already an event in DFS, even if they’re alive.”
+私「イベント扱いって？」
 :::
 
 ::: voice-father
-Dad: “Exactly. For RFS, it’s usually:
-:::
-
-- recurrence
-- death
-
-::: voice-father
-Dad: “Second cancers generally don’t count as events there.”
+お父さん「生存時間データは、一般に特定のイベントまでの経過時間なんだ。端的にいうとね、無病生存期間のデータから“3年無病生存確率”を計算するとするでしょ。それは“イベントが起こらない確率”に相当するんだけど、意味合いとしては3年時点で、再発も2次がんも経験せず、生存できる確率を求めることになる」
 :::
 
 ::: voice-daughter
-Me: “And OS is just time to death.”
+私「そういうことか」
 :::
 
 ::: voice-father
-Dad: “Right. So if you look at 3-year OS and 3-year DFS for the same trial, 3-year DFS is always less than or equal to 3-year OS, because DFS counts more things as events.”
+お父さん「RFSでは、イベントは死亡と再発のするのが普通。つまり二次がんはイベントに含めない。無再発期間だったらイベントは再発だけ。図をみたら、イメージしやすくなるかな」
+:::
+
+
+![](study-design-2.png)
+
+::: voice-daughter
+私「ふんふん。私はね、無病生存期間の結果が重要だと思うな。再発と2次がん、どっちも起きない方がいい。無再発期間はあまり解析する意味を感じないな。死亡は一番重要なイベントじゃない？なんで省いちゃうのよ」
+:::
+
+::: voice-father
+お父さん「そうだね。でも、がんが再発した後に死亡した患者は、無再発期間だったとしてもイベント扱いになるよね」
 :::
 
 ::: voice-daughter
-Me: “Got it. But from a patient’s point of view, ‘no recurrence and no second cancer’ sounds pretty important. So DFS feels meaningful. RFS... I’m less sure. And death is obviously the most serious event of all.”
+私「確かにね。よく考えたら、再発前に亡くなるケースって、感染症とか、交通事故とかだね。がん治療や原病とは関係ないかもしれない」
 :::
 
 ::: voice-father
-Dad: “Agreed. But notice:
+お父さん「臨床試験で用いられるアウトカムは、”エンドポイント”とよばれることもあるよね。研究によって研究仮説が違うから、それにあわせて様々なエンドポイントが選ばれる。進行がんではがんの増悪に注目した無増悪生存期間、根治切除後の研究では無再発生存期間とかね。表に、がん臨床試験の主な生存時間エンドポイントを整理してあげるよ（Japan Clinical Oncology Group 2021）」
 :::
 
-- If someone **relapses** and later dies, they’re already an event in RFS at the time of relapse, even before death.  
-
-- If someone dies **before relapse**, the cause might be an infection, accident, or something unrelated to the original cancer.”
+| エンドポイント | イベント1 | イベント2 | イベント3 | イベント4 | 打ち切り日 |
+|------------|------------|------------|------------|------------|------------|
+| 全生存期間 | 死亡 |  |  |  | 最終生存確認日 |
+| 無増悪生存期間 | 死亡 | 増悪/再発 |  |  | 最終無増悪確認日 |
+| 無再発生存期間 | 死亡 | 再発 |  |  | 最終生存確認日 |
+| 無再発期間 | 再発 |  |  | | 最終生存確認日 |
+| 無病生存期間 | 死亡 | 再発 | 2次がん |  | 最終生存確認日 |
+| 無イベント生存期間 | 死亡 | 寛解導入失敗 | 再発 | 2次がん | 最終生存確認日 |
+| 治療成功期間 | 死亡 | 治療中止（治療中の増悪/再発を含む） | プロトコール治療完了後の増悪/再発 |  | 最終治療継続確認日または最終無増悪確認日 |
 
 ::: voice-daughter
-Me: “So not all deaths are equal in terms of ‘cancer story’.”
+私「でかした！」
 :::
 
 ::: voice-father
-Dad: “Exactly. Let me show you a simplified table of common **survival endpoints in cancer trials**. Think of it as a map, not a legal document.”
-:::
-
-| Endpoint                              | What counts as an event?                                            |
-|---------------------------------------|---------------------------------------------------------------------|
-| Overall survival (OS)                 | Death from any cause                                                |
-| Progression-free survival (PFS)       | Progression or death                                                |
-| Relapse-free survival (RFS)           | Relapse or death                                                    |
-| Cumulative incidence of relapse (CIR) | Relapse only, with death as a competing risk                        |
-| Disease-free survival (DFS)           | Relapse, second cancer, or death                                    |
-| Event-free survival (EFS)             | Death, induction failure, relapse, second cancer (depends on trial) |
-
-::: voice-father
-Dad: “The key idea is:”
-:::
-
-- OS cares only about **death** 
-- DFS cares about **any recurrence / second cancer / death**
-- RFS sits in between
-
-::: voice-daughter
-Me: “Okay, that really helps. And the **time origin** is... usually when treatment starts?”
-:::
-
-::: voice-father
-Dad: “Good question. Common choices for the **time origin** are:”
-:::
-
-- date of **surgery**  
-- date of **randomization/registration** in a trial  
-- date of **diagnosis**
-
-::: voice-father
-Dad: “For a study on postoperative adjuvant therapy, using the date of surgery is natural. If you used date of discharge instead, deaths before discharge would be invisible in your analysis, which can be a big problem.”
+お父さん「この表は、臨床試験グループが研究計画書を作るときのものなんだ。研究計画書は、医師や統計家がチームになって書くからね。定義を決めておかないと混乱する。このグループでは"one word one meaning"がモットーなんだ」
 :::
 
 ::: voice-daughter
-Me: “So if I’m evaluating adjuvant chemo after surgery, time zero = surgery date is the cleanest. If I pick a weird origin, I’m basically throwing away part of the story.”
+私「だよね、私もこんがらがり中だわ」
 :::
 
 ::: voice-father
-Dad: “Exactly. Time origin is like the zero point on your ruler: if you set it wrong, all the distances become hard to interpret.”
-:::
-
-### Survival analysis and competing risks analysis
-
-::: voice-father
-Dad: “Want to see how OS, RFS, and CIR behave in data?”
+お父さん「OSは、**生存時間の原点（time origin）**から死亡するまでの期間のこと。DFSは、時間原点から再発、2次がん、死亡のうち、最初のイベントまでの期間のこと。でも、さっき言ったみたいに、3年OSとか3年DFSという言い方をすることもある。この場合は期間じゃなくて確率の意味になる。OSとDFSの違いは、再発と2次がんが含まれること。そうすると、3年OSより3年DFSの方が、確率は小さくなるよね」
 :::
 
 ::: voice-daughter
-Me: “That’s a dangerous question, but yes.”
+私「時間原点ってはじめて聞いた。もう少し説明してよ」
 :::
 
 ::: voice-father
-Dad: “Let’s use R again. We’ll simulate two groups with and without stoma. We’ll give the stoma group a higher risk of relapse and death. And see how that shows up in:”
+お父さん「じゃあ、どの時点から生存時間をスタートするか、典型的な決め方をいくつか紹介しようか。まず、DFSは根治手術後の再発状況を調べるため用いられるアウトカムだよね。だから、”手術日”がこの場合の時間原点の候補になる。手術日のように治療の起点がはっきりしている状況だと決めやすいよね」
+:::
+
+::: voice-daughter
+私「あーよくみるやつだわ」
+:::
+
+::: voice-father
+お父さん「でしょ。一方で、もし”退院日”を時間原点にすると、手術直後の死亡が評価対象にならなくなっちゃうから、研究によってはそこを批判されるかもしれない。もうひとつ典型的な決め方を挙げると、臨床試験の登録日があるかな。ランダム化臨床試験だと、登録日に治療をランダムに割付けるから、それを原点にして生存曲線を描くのが自然だよね」
+:::
+
+::: voice-daughter
+私「なるほどね、研究によって微妙に定義が違うもんね。実は今、調査票作っててね。お父さんがアウトカムにうるさいって周りに話したら、みんな意外とちゃんと区別してて。DFSとかOSを正確に知りたかったんだ。聞いてよかった、また相談するね」
 :::
 :::::::::::::::::::::::::::::::::
 
-- OS curves  
-- RFS curves  
-- CIR curves with death as competing risks
+::: {.callout-note appearance="simple"  title="臨床エンドポイントと代替エンドポイント"}
+OS、DFS、RFSは、特に術後補助化学療法の有効性を評価するときに用いられるアウトカム（エンドポイントともいいます）です。それでは両者は、どのような考え方で使い分けられているのでしょうか。指針の1つになっているのが、医薬品の承認審査の考え方です。たとえば抗悪性腫瘍薬の臨床評価方法に関するガイドライン（厚生労働省2021）では、抗がん剤を承認するためには、生存期間の延長などにもとづき、確実な有効性を示す必要があると述べています。そのため、具体的な指標として、OSが**臨床エンドポイント（clinical endpoint）**とみなされ、こちらが重視されています（Biomarkers Definitions Working Group 2001）。
 
-::: {.callout-note appearance="simple" title="Generating simulated data with relapse"}
-
-The following code defines an R function, `generate_data()`, that produces a binary variable, stoma, and three related survival outcomes, OS, RFS and CIR. We’ll reuse `generate_data()` and this simulated dataset in later episodes.
-
-- Stoma: binary, from a binomial distribution using `rbinom()`  
-
-- Survival time: from an exponential distribution using `rexp()` (calculated from random numbers for t_relapse, t_death, t_censoring)
-
-In a previous episode, we summarized survival data without competing risks, and we used the **Kaplan-Meier curve** for that, right? In contrast, when there are **competing risks**, it is more appropriate to use the **Aalen–Johansen estimator of the cumulative incidence function**, rather than a Kaplan–Meier curve for relapse.
+その一方で、術後補助化学療法としての抗がん剤の有効性を評価する臨床試験では、**代替エンドポイント（surrogate endpoint）**として採用することがあります。代替エンドポイントとは、臨床エンドポイントの代わりになることが意図されたもので、臨床上の便益・害の有無を予測することが期待されるものと定義されます。DFSのような代替エンドポイントを用いる最大のメリットは、試験期間が短くなることです。ただし、過去の承認審査では、代替エンドポイントの利用が誤った医薬品評価につながったケースが数多く報告されています（Fleming and DeMets 1996）。たとえば、進行大腸がんにおける5FU+ロイコボリン併用療法は、臨床試験で腫瘍縮小がみられたにもかかわらず、臨床エンドポイントであるOSを評価すると、ほとんど延命効果がないことが明らかになりました（Fleming and DeMets 1996）。
 :::
 
-::: {.callout-note appearance="simple"  collapse="true" title="Code of generate_data() used for data generation"}
-```{r warning=FALSE}
-generate_data <- function(n=200, hr1, hr2) {
-  stoma <- rbinom(n, size = 1, prob = 0.4)
-  sex <- rbinom(n, size = 1, prob = 0.5)
-  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
-  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # hazard for relapse
-  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # hazard for death
-  hazard_censoring <- 0.05                               # hazard for censoring
-  
-  # Latent times to relapse, death, and censoring ----------------
-  t_relapse   <- rexp(n, rate = hazard_relapse)
-  t_death     <- rexp(n, rate = hazard_death)
-  t_censoring <- rexp(n, rate = hazard_censoring)
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+がん臨床研究で用いられるアウトカムのひとつに無増悪生存期間（progression-free survival）があります。このアウトカムを測定するには、画像による腫瘍増悪の判定が必要になります。このとき、客観性を高めるため、第三者が画像をみて増悪を判定すると、主治医による増悪の判定と一致しないことがあり得ます。この問題は、中央判定と施設判定の不一致と呼ばれます。以下の選択肢のうち、対処法として適切でないものを選びなさい。
 
-  ## --- Overall survival (OS) -----------------------------------
-  time_os   <- pmin(t_death, t_censoring)
-  status_os <- as.integer(t_death <= t_censoring)  # 1 = death, 0 = censored
-  
-  ## --- Relapse-free survival (RFS) -----------------------------
-  time_rfs <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_rfs <- integer(n)
-  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # relapse
-  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # death
-  
-  ## --- Cumulative incidence of relapse (CIR) -------------------
-  time_cir <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_cir <- integer(n)
-  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # relapse
-  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # death (competing risk)
+1.  統計解析では、客観性が高い中央判定の結果を採用する
+2.  統計解析では、中央判定と施設判定のうち、先に起きたものを採用する
+3.  症例検討会を開き、中央判定と施設判定の結果が一致しない患者の扱いを医学的に決定する
+4.  中央判定を採用した解析と、施設判定を採用した解析の、2通りを行う
+:::
 
-  dat <- data.frame(
-    id         = 1:n,
-    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-    age        = age,
-    stoma      = factor(stoma, levels = c(0, 1),
-                        labels = c("WITHOUT STOMA", "WITH STOMA")),
-    time_os    = time_os,
-    status_os  = status_os,
-    time_rfs   = time_rfs,
-    status_rfs = status_rfs,
-    time_cir   = time_cir,
-    status_cir = status_cir
-  )
-  return(dat)
-}
-```
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+-   **正解は2です**
+
+中央判定と施設判定のうち、先に起きたものを採用すると、無増悪生存期間が短くなる方向にバイアスが生じるため、適切ではありません。
+
+ひとつだけ注意があります。施設判定ではなく中央判定を必ず採用すべき、というわけではありません。施設で増悪になった後、それが追跡状況や画像検査の頻度に影響したり、施設の担当医の治療方針が変化したりすることがあります。このような状況では、施設判定を用いることが適切かもしれません。
 :::
 
 
-::: {.callout-note appearance="simple"  title="Kaplan–Meier curves for OS"}
-Since OS and RFS are standard survival data, we will describe them using **Kaplan–Meier curves**, as before, using the `cifplot()` function from the `cifmodeling` package.
-
-```{r warning=FALSE}
-# devtools::install_github("gestimation/cifmodeling") # if needed 
-library(cifmodeling)
-set.seed(46)
-dat <- generate_data(hr1=2, hr2=1.5)
-
-cifplot(Event(time_os, status_os) ~ stoma,
-  data         = dat,
-  outcome.type = "survival",
-  label.y      = "Overall survival"
-)
-```
-
-In this simulated data, patients with a stoma have clearly worse OS: their Kaplan–Meier curve drops faster and stays below the curve for patients without a stoma. 
-:::
-
-
-::: {.callout-note appearance="simple"  title="Kaplan–Meier curves for RFS"}
-
-```{r}
-cifplot(Event(time_rfs, status_rfs) ~ stoma,
-  data         = dat,
-  outcome.type = "survival",
-  label.y      = "Relapse-free survival"
-)
-```
-For RFS, the Kaplan–Meier curves drop faster and the gap is even larger, because both relapse and death are counted as events. 
-:::
-
-::: {.callout-note appearance="simple"  title="Aalen-Johansen curves for CIR"}
-
-The following code inputs the risk of recurrence by coding `Event(time_cir, status_cir)`.
-
-- `status_cir=1` : Event of interest (recurrence)
-- `status_cir=2` : Competing risk (death not experiencing recurrence)
-- `status_cir=0` : Censoring
-
-Furthermore, by specifying `outcome.type = "competing-risk"`, it plots the **Aalen-Johansen curve**.
-
-```{r}
-cifplot(Event(time_cir, status_cir) ~ stoma,
-  data         = dat,
-  outcome.type = "competing-risk",
-  label.y      = "Cumulative incidence of relapse"
-)
-```
-:::
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-Me: “Competing risk... like an event that ‘steals the chance’ for relapse to happen?”
-:::
-
-::: voice-father
-Dad: “Exactly. If a patient dies before relapse, we’ll never see relapse in that patient’s timeline. Death ‘competes’ with relapse.”
-:::
-
-::: voice-daughter
-Me: “The curve for relapse looks a bit like a survival curve turned upside down.”
-:::
-
-::: voice-father
-Dad: “Visually, yes. But conceptually it’s different. By the way, I mentioned wanting to use ‘cumulative incidence of relapse‘ instead of ‘relapse-free time‘ because a **cumulative incidence curve** or **cumulative incidence function** is the same as the **Aalen-Johansen curve** in the context of survival analysis. If you used Kaplan–Meier for relapse, you’d treat deaths as censored — as if they just disappeared from the risk set. But death isn’t the same as ‘lost to follow-up’. It’s a real, meaningful event. So for competing risks, we prefer to estimate the Aalen-Johansen curve, which respects the fact that death is another type of event. In other words, choosing ‘who is an event’ and ‘who is a competing risk’ changes how we interpret the outcome.”
-:::
-
-::: voice-daughter
-Me: “By the way, in journal club people love to say:”
-:::
-
-- OS is the only real endpoint
-- DFS is just a surrogate
-
-::: voice-daughter
-Me: “Is that fair?”
-:::
-
-::: voice-father
-Dad: “It’s...simplified. Regulators and guidelines often treat OS as a *clinical* endpoint — **an outcome that directly reflects patient benefit**. Things like DFS or PFS are often used as *surrogate* endpoints. A surrogate endpoint is **an outcome intended to substitute for a clinical endpoint, and expected to predict clinical benefit or harm**. This is a formal terminology in drug approval contexts (Biomarkers Definitions Working Group 2001).”
-:::
-
-::: voice-daughter
-Me: “The obvious advantage is that you can finish the trial earlier, right? You don’t have to wait for OS to mature.”
-:::
-
-::: voice-father
-Dad: “Exactly. Shorter trials, faster answers. But there’s a risk: sometimes surrogates don’t predict OS well. There are famous examples. In advanced colorectal cancer, combination therapy with 5-FU and leucovorin demonstrated tumor shrinkage in clinical trials. However, when evaluating OS, it became clear that this combination had little effect on prolonging life (Fleming and DeMets 1996). Surrogates can be very useful, but they’re not automatically ‘good enough’ on their own.”
-:::
-
-::: voice-daughter
-Me: “So in practice, we often look at OS when possible, and use DFS / PFS with a bit of skepticism and context.”
-:::
-
-::: voice-father
-Dad: “That’s a healthy attitude.”
-:::
-::::::::::::::::::::::::::::::::: 
-
-
-::: {.callout-note appearance="simple" title="A quiz related to this episode"}
-
-This quiz focuses on how we define progression and events when using **progression-free survival (PFS)** as an endpoint in clinical trials. To measure PFS, we need to determine tumor progression based on imaging. Sometimes a central review committee evaluates images to make this more objective. In that case, there may be discrepancies between:
-
-- the progression date according to the **central review**, and  
-- the progression date according to the **local investigator**.
-
-This issue is called a disagreement between central and local assessment. Which of the following is not appropriate as a way to handle this in a clinical trial?
-
-1. In the primary analysis, use the results of the central review, which is considered more objective.  
-2. In the primary analysis, define progression as whichever date comes first: central or local.  
-3. Hold a case review meeting and decide how to handle discrepant cases based on medical judgment.  
-4. Perform two analyses: one using central assessment, and one using local assessment.
-:::
-
-::: {.callout-note appearance="simple" collapse="true" title="Answer"}
--   The correct answer is **2**.
-
-If you define the event as “whichever progression date comes first (central or local)”, you are more likely to shorten PFS artificially, because you systematically choose the earlier of the two dates. That introduces bias.
-
-This doesn’t mean you must always use central review; in some contexts, local assessment may better reflect real clinical decision-making. But “always take the earlier date” is not an appropriate general rule.
-:::
-
-### Reference
+### 文献
 
 - Biomarkers Definitions Working Group. Biomarkers and surrogate endpoints: preferred definitions and conceptual framework. Clin Pharmacol Ther 2001;69(3):89-95
 
 - Fleming TR and DeMets DL. Surrogate end points in clinical trials: are we being misled? Ann Intern Med 1996;125(7):605-13
 
-### Episodes and R-script
+- [JCOGプロトコールマニュアル version 3.8 [Internet]. 東京: Japan Clinical Oncology Group; 2025](https://jcog.jp/doctor/tool/manual/) 
 
-- [A Story of Coffee Chat and Research Hypothesis](study-design-1.qmd)
-- [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.qmd)
-- [A First Step into Survival and Competing Risks Analysis with R](study-design-3.qmd)
-- [Outcomes: The Bridge from Data Collection to Analysis]
+- [薬生薬審発0331第1号. 抗悪性腫瘍薬の臨床評価方法に関するガイドライン [Internet]. 東京: 厚生労働省医薬・生活衛生局医薬品審査管理課長; 2021](https://www.pmda.go.jp/files/000243746.pdf)
+
+### エピソードとRスクリプト
+
+- [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
+- [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
+- [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
+- [A First Step into Survival and Competing Risks Analysis with R]
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]
 
 - [study-design.R](../from-coffee-chat-to-r/study-design.R)
