--- a/en/Study-design-5.qmd
+++ b/en/Study-design-5.qmd
@@ -144,331 +144,164 @@ a:hover {
 </style>
 ```
 
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
+
 # Study Design 5 − When Bias Creeps In
 
 ::: {.serif-block .text-right}
-Keywords: observational study, outcome, simulation, survival/competing-risk, study design
+Keywords: bias, confounding/collapsibility, observational study, probability model, simulation, study design, survival/competing-risk
+:::
+------------------------------------------------------------------------
+
+### 調査で気をつけておくべきバイアス
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ただいまーつかれたー。お父さん、甘いものない？」
 :::
 
----
-
-### “Hard endpoints” and soft feelings
-
-::::::::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-Me: “I’m home...completely drained. Is there anything sweet?”
-::: 
-
 ::: voice-father
-Dad: “There’s a strawberry daifuku. And I just brewed coffee.”
-::: 
-
-::: voice-daughter
-Me: “You are objectively improving my quality of life. Today was rough. Clinic was packed, and the train home was rush-hour level insane.”
-::: 
-
-::: voice-father
-Dad: “That sounds like classic Japanese hospital plus Tokyo commute. Here, coffee.”
-::: 
-
-::: voice-daughter
-Me: “Thanks. So, there’s something I wanted to ask. You know how people in oncology love to say **‘hard endpoint’** and **‘soft endpoint’**?”
-::: 
-
-::: voice-father
-Dad: “Yes, people say that a lot.”
-::: 
-
-::: voice-daughter
-Me: “One of my senior colleagues is really into clinical trials. She keeps saying things like:
-
-> ‘Return-to-work is such a **soft endpoint**.  
-> OS is a **hard endpoint**.  
-> Soft is bad, hard is good.’
-
-And every time she says that, I feel like my return-to-work study is being gently dissed. I sort of get what she means, but not really.”
-::: 
-
-::: voice-father
-Dad: “I can imagine the tone. The way people use those words is a bit loose. If we want to be clearer, it might help to think in terms of **objective measure** vs **subjective measure**.”
-::: 
-
-::: voice-daughter
-Me: “So OS is ‘hard’ because it’s objective?”
-::: 
-
-::: voice-father
-Dad: “Pretty much. For **overall survival (OS)**, you only need date of death or the last date of confirmation of being alive. That’s relatively straightforward. For something like **progression-free survival (PFS)**, you need to decide **when progression happened**. That depends on factors unrelated to disease status:"
-::: 
-
-- imaging timing
-- how you interpret the scans
-- sometimes even symptoms unrelated to cancer
-
-::: voice-father
-Dad: “There’s more **judgment** involved. That’s why people call it a **soft endpoint**.”
-::: 
-
-::: voice-daughter
-Me: “And return-to-work is even more ‘soft’, right? We’re asking about patients’ own perceptions, jobs, feelings...”
-::: 
-
-::: voice-father
-Dad: “Right, but that doesn’t make it meaningless. I think what your colleague *meant* was something like:
-
-> ‘When you work with soft endpoints,  
-> try to measure them as **consistently** and **objectively** as possible.’”
-::: 
-
-::: voice-daughter
-Me: “So not ‘soft = trash’, but ‘soft = more room for bias, so be careful’.”
-::: 
-
-::: voice-father
-Dad: “Exactly. Even ‘hard’ endpoints like death can be biased if follow-up is sloppy. If, for example, you only track deaths in patients who keep coming to the hospital, you might systematically **miss deaths** in those who stop showing up. So hard endpoints are not automatically free of bias.”
-::: 
-
-::: voice-daughter
-Me: “Okay, that makes me feel better about my study. I’ll phrase it as: *‘a soft endpoint, measured with hard discipline.’*”
-::: 
-
-::: voice-father
-Dad: “That’s actually a great line for the methods section. To be precise, you don’t need perfect information on every death. What matters is that the process of collecting death information is not related to patients’ health status.
-If whether we obtain death information depends on how sick someone was, that creates bias.”
-::: 
-
-::: voice-daughter
-Me: “It means censoring is no longer independent of prognosis, right? ”
-::: 
-
-::: voice-father
-Dad: “Yes. Remember the **Kaplan–Meier** and **Aalen–Johansen** curves I showed you? Those estimators can handle censoring, but they only remain unbiased if censoring occurs randomly, unrelated to the outcome. For example, when all patients are censored at 1 year because the study ends, or when an external reason stops follow-up for some patients.”
+お父さん「いちご大福ならあるよ。コーヒーもちょうど淹れたところだ」
 :::
 
 ::: voice-daughter
-Me: “I get the idea. But there are situations where we just can’t track deaths perfectly. We can only do our best.”
-:::
-
-### Bias in Kaplan–Meier curves
-
-::: voice-daughter
-Me: “Okay...besides that, what other types of bias should I be careful about in my survey?”
+私「ああ助かる。この時間帯に仕事が終わるとちょうど満員電車でさ、きついんだよね。診療時間の間もハードだったし」
 :::
 
 ::: voice-father
-Father: “As I said before—competing risks. In time-to-event data, ignoring competing risks can lead to bias. Can you take out your laptop?”
+お父さん「おつかれさま。コーヒーはいったよ」
 :::
 
 ::: voice-daughter
-Me: “What? I literally just came back from work...”
+私「ありがとう。あのさ、**ハードなエンドポイント**と**ソフトなエンドポイント**って言い回しがあるじゃない？」
 :::
 
 ::: voice-father
-Father: “It’ll be quick. I’ll tweak the R script we used last time and show you what statistical bias looks like with a simple simulation.”
-:::
-:::::::::::::::::::::::::::::::::
-
-
-::: {.callout-note appearance="simple" title="Bias of the Kaplan–Meier curve in a simulated dataset with recurrence and competing risks"}
-In our previous simulations of cumulative incidence of recurrence (CIR), we generated patients who could die before experiencing recurrence (a competing risk). With a simple experiment, you can confirm that the Kaplan–Meier estimator becomes biased in the presence of competing risks.
-:::
-
-::: {.callout-note appearance="simple"  collapse="true" title="Code of generate_data() used for data generation"}
-```{r warning=FALSE}
-generate_data <- function(n=200, hr1, hr2) {
-  stoma <- rbinom(n, size = 1, prob = 0.4)
-  sex <- rbinom(n, size = 1, prob = 0.5)
-  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
-  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # hazard for relapse
-  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # hazard for death
-  hazard_censoring <- 0.05                               # hazard for censoring
-  
-  # Latent times to relapse, death, and censoring ----------------
-  t_relapse   <- rexp(n, rate = hazard_relapse)
-  t_death     <- rexp(n, rate = hazard_death)
-  t_censoring <- rexp(n, rate = hazard_censoring)
-
-  ## --- Overall survival (OS) -----------------------------------
-  time_os   <- pmin(t_death, t_censoring)
-  status_os <- as.integer(t_death <= t_censoring)  # 1 = death, 0 = censored
-  
-  ## --- Relapse-free survival (RFS) -----------------------------
-  time_rfs <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_rfs <- integer(n)
-  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # relapse
-  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # death
-  
-  ## --- Cumulative incidence of relapse (CIR) -------------------
-  time_cir <- pmin(t_relapse, t_death, t_censoring)
-  
-  status_cir <- integer(n)
-  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # relapse
-  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # death (competing risk)
-
-  dat <- data.frame(
-    id         = 1:n,
-    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
-    age        = age,
-    stoma      = factor(stoma, levels = c(0, 1),
-                        labels = c("WITHOUT STOMA", "WITH STOMA")),
-    time_os    = time_os,
-    status_os  = status_os,
-    time_rfs   = time_rfs,
-    status_rfs = status_rfs,
-    time_cir   = time_cir,
-    status_cir = status_cir
-  )
-  return(dat)
-}
-```
-:::
-
-::: {.callout-note appearance="simple" title="Aalen-Johansen curves for cumulative incidence of relapse (CIR)"}
-Kaplan–Meier曲線とAalen-Johansen曲線は、どちらも`cifmodeling`パッケージの`cifplot()`を使って生成できますが、イベントのコーディングを入力する`code.event1`、`code.event2`とデータの型を表す`outcome.type`を、指定する必要があります。`generate_data()`で生成したシミュレーションデータでは、CIRのイベントは以下のようにコーディングされていました。
-
-- `status_cir=1` : 再発
-- `status_cir=2` : 再発を経験しない死亡
-- `status_cir=0` : 打ち切り
-
-以下のRスクリプトでは、最初の`cifplot()`により、再発（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event1`）を出力しています。縦軸は累積発生確率ではなく、1-累積発生確率を選んでいる点にも注意してください（`type.y="surv"`）。そして次の`cifplot()`ではイベントを入れ替えて、再発を経験しない死亡（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event2`）を出力し、`cifpanel()`に用いて2つの図を左右に配置したひとつの図を表示しています。左右の累積発生確率の和に注目してください。この図からは、再発の累積発生確率と（再発を経験しない）死亡の累積発生確率の和は、時間が経つにつれ1に近づくが、1を超えることはないことがわかります。仮に打ち切りがなかったとしたら、再発と（再発を経験しない）死亡のどちらか一方しか生じないため、Aalen-Johansen曲線の和が1を超えないのは自然なことです。
-
-```{r}
-# devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
-library(cifmodeling)
-set.seed(46)
-dat <- generate_data(hr1=2, hr2=1.5) #再発ハザード比2, 死亡ハザード比1.5のデータ生成
-
-aj_event1 <- cifplot(Event(time_cir, status_cir) ~ stoma,
-  data         = dat,
-  outcome.type = "competing-risk", 
-  type.y       = "surv",
-  code.event1  = 1, 
-  code.event2  = 2
-)
-aj_event2 <- cifplot(Event(time_cir, status_cir) ~ stoma,
-  data         = dat,
-  outcome.type = "competing-risk", 
-  type.y       = "risk",
-  code.event1  = 2, 
-  code.event2  = 1
-)
-aj_list <- list(aj_event1$plot, aj_event2$plot)
-aj_panel <- cifpanel(rows.columns.panel = c(1,2), plots=aj_list)
-print(aj_panel)
-```
-:::
-
-::: {.callout-note appearance="simple"  title="Kaplan–Meier curves for cumulative incidence of relapse (CIR)"}
-実際の研究では、死亡を打ち切りとして扱った生存時間解析の結果をしばしば目にします。この解析に対応するKaplan–Meier曲線は、以下のようにイベントのコーディングを変更し、`outcome.type="survival"`を指定することで出力できます。
-
-- `status_cir1=1` : 再発
-- `status_cir1=0` : 再発を経験しない死亡/打ち切り
-- `status_cir2=1` : 再発を経験しない死亡
-- `status_cir2=0` : 再発/打ち切り
-
-新しく作ったイベント変数`status_cir1`と`status_cir2`を用いると、再発のKaplan–Meier曲線と（再発を経験しない）死亡のKaplan–Meier曲線を描くことができます。これらのKaplan–Meier曲線を左右に配置した図を、先ほどのAalen-Johansen曲線の図と比べてみてください。Aalen-Johansen曲線の和とは異なり、Kaplan–Meier曲線の和が1を超えていることが読み取れたでしょうか。
-
-```{r}
-dat$status_cir1 <- as.numeric(dat$status_cir==1)
-km_event1 <- cifplot(Event(time_cir, status_cir1) ~ stoma,
-  data         = dat,
-  outcome.type = "survival", 
-  type.y       = "surv"
-)
-dat$status_cir2 <- as.numeric(dat$status_cir==2)
-km_event2 <- cifplot(Event(time_cir, status_cir2) ~ stoma,
-  data         = dat,
-  outcome.type = "survival", 
-  type.y       = "risk"
-)
-km_list <- list(km_event1$plot, km_event2$plot)
-km_panel <- cifpanel(rows.columns.panel = c(1,2), plots=km_list)
-print(km_panel)
-```
-:::
-
-
-
-### Three familiar troublemakers: selection, information, confounding
-
-::::::::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-Dad: “Sure. You’re mailing out questionnaires, right? When a lot of patients don’t respond, that introduces bias. For example, are you asking about annual income?”
+お父さん「あるね」
 :::
 
 ::: voice-daughter
-Me: “Maybe.”
+私「臨床試験にあこがれてる先輩がいてね、復職状況はソフトなエンドポイントだからだめだ、全生存期間（OS）はハードなエンドポイントだからいいんだ、みたいな言い方をするのよ。私の調査が否定されてるみたいなんだけど、どういうことなのか、よくわかんなくて」
 :::
 
 ::: voice-father
-Dad: “Then be careful. Sensitive questions can lower the response rate. If non-response is systematic, your sample no longer represents the target population. For example:"
-::: 
-
-- Patients who are doing well may be more likely to answer.  
-- Patients who are very sick, depressed, or busy may be less likely to answer.
-
-::: voice-father
-Dad: “Then your estimated **return-to-work proportion** can be **too optimistic**. Also, suppose patients with a stoma are more likely to return the questionnaire than those without a stoma. Then comparing those two groups could be criticized because of differential response rates.”
+お父さん「確かにがん臨床試験はOSをエンドポイントにすることが多いけど、それを基準にダメ出しするのもどうかと思うけどね。それに、慣用的にハード・ソフトっていう表現が用いられるけど、その意味を正確に伝えるなら、客観的・主観的って言った方がいいんじゃないかな」
 :::
 
 ::: voice-daughter
-Me: “Is that... confounding?”
+私「客観的？主観的？」
 :::
 
 ::: voice-father
-Dad: “You know the term? Nice. Confounding is a type of bias, but this is different. When the selection of participants itself depends on certain characteristics, we call it selection bias. And if the information collected is inaccurate—like when people overreport income — that’s information bias. In classes on study design and observational studies, we divide bias into three main categories:
+お父さん「よくある議論を挙げると、OSはハード、無増悪生存期間（PFS）はソフトというのがある。OSは死亡日と最終生存確認日だけで決まるから、ハードなエンドポイント。PFSでは、死亡とがんの増悪がイベントとして定義されるんだけど、そうするとデータを集めるために増悪日の情報が必要になる。ところが臨床的には増悪がいつ起きたかは、主観的に判断されるケースがあるよね。全身状態や腫瘍マーカーが悪化したりするケースだね。臨床試験で、こういうケースをイベントとみなすかは議論がわかれるけど、意見がわかれること自体でPFSはソフトなエンドポイントっていう人もいるね」
 :::
+
+::: voice-daughter
+私「なるほど、ハード=客観的、ソフト=主観的ってことね。たしかに、私の調査票はソフトなエンドポイントっていわれるわけだ。そもそも患者さんの主観を尋ねるための調査だもんね」
+:::
+
+::: voice-father
+お父さん「まあ、その先輩が伝えたかったのは、復職状況を調べるうえで、できるだけあいまいな部分を排除して、客観的に測定しなさいってことじゃない？調査対象者が、退院後の就労日を正確に回答してくれるなら、十分に客観的な測定ができていると思うけどね」
+:::
+
+::: voice-daughter
+私「じゃあさ、ハードなエンドポイントにはバイアスがない、ソフトなエンドポイントにはバイアスがあるって考えていい？」
+:::
+
+::: voice-father
+お父さん「主観が入るとバイアスが生じやすいとはいえるけど、そんなに単純じゃないかな。調査がいい加減だったら、死亡が完全に特定できず、死亡率を過小評価することだってあるもの。ちょっとたばこを吸っていい？」
+:::
+
+::: voice-daughter
+私「どうぞご自由に。死亡調査って大変だよね」
+:::
+
+::: voice-father
+お父さん「そうそう。もっと細かいことをいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
+:::
+
+::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
+
+統計学は誤差を扱う学問ですが、臨床研究では**ランダム誤差（random error）**と**バイアス（bias）**を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
+
+たとえるなら、ランダム誤差は的の中心を狙って矢を放つときのばらつき、バイアスは狙いが中心からずれている状態といえます。競合リスクの扱いを間違ったとき生じるKaplan-Meier曲線のバイアスは、ランダム誤差ではありませんよね。ランダム誤差はサンプルサイズを大きくすることで減少させることができますが、バイアスは研究デザインやデータ収集方法を工夫しないと、解消できません。
+
+![](study-design-5.png)
+:::
+
+
+### バイアスの分類
+
+::: voice-daughter
+私「そりゃあ、データが偏ったらバイアスっていうのは私にもわかるけど。死亡情報が集められないのはどうしようもないときだもの。ベストを尽くすしかないよね。じゃあさ、私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+:::
+
+::: voice-father
+お父さん「そうだね。調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を上げるように工夫するといい。たとえば、調査票で年収って聞いてる？」
+:::
+
+::: voice-daughter
+私「聞くかもしれない」
+:::
+
+::: voice-father
+お父さん「経済状況のようなナイーブな質問内容には十分配慮した方がいいよ。それが理由で回答してくれないと、解析対象集団が調査対象全体を代表しているといえなくなってしまう」
+:::
+
+::: voice-daughter
+私「他には？」
+:::
+
+::: voice-father
+お父さん「他にはね、ストーマ非保有者よりストーマ保有者の方が、調査票への回答率が高くなっちゃうとか。そもそもストーマ非保有者とストーマ保有者の回答率に差があると、これらの集団を比較してもバイアスがあるって批判されるかもしれない」
+:::
+
+::: voice-daughter
+私「それって**交絡**のこと？」
+:::
+
+::: voice-father
+お父さん「交絡ってどこで聞いたの？よく知ってるね。あれもバイアスの一種だけど、今回のとは違う。回答率の差やなにか理由があって回答してくれない場合は、母集団からのサンプル抽出に影響する**選択バイアス**といって、区別されるんだ。それに、年収って尋ねられると、過大申告してしまいがちだよね。このように集めた情報自体に偏りがあることを、**情報バイアス**と呼んでいる。調査や観察研究の計画に関する授業では、バイアスを3種類に大別して考えるといいって教えている。
+:::
+
+- 選択バイアス（selection bias）
+
+- 情報バイアス（information bias）
+
+- 交絡（confounding）
+
+::: voice-father
+実際に研究を行うといろいろ理由でバイアスが生じるけど、研究デザインの段階では、この3つに分けて考えると対策を立てやすい。一部の対象者ばかり選ばれないようにしなさい、情報を集めるときはバイアスが入らないように配慮しなさい、集団を比較するときは、比較したい要因以外の特徴を揃えるようにしなさいってね」
+:::
+
+::: voice-daughter
+私「ふーん？選択バイアス、情報バイアスねえ？やっぱり臨床研究って言葉遣いがよくわかんないな」
+:::
+
+
 
 - Selection bias
+
 - Information bias
+
 - Confounding
 
 ::: voice-father
-Dad: “Most biases fall into one of these three. So when designing a study, we teach students:"
-:::
-
-- Make sure you’re not selecting only certain types of people.
-
-- Collect information in a way that avoids systematic errors.
-
-- When comparing groups, adjust for characteristics other than the variable of interest.
-
-::: voice-father
-Dad: “Keeping these three in mind makes countermeasures much easier.”
+“In practice, real studies run into all sorts of biases for all sorts of reasons. But at the design stage, thinking in terms of these three categories makes it easier to plan countermeasures: don’t let your sample consist mainly of a particular subset of the population, when collecting information, design your procedures to minimize bias, and when comparing groups, make sure they are similar with respect to factors other than the exposure of interest”
 :::
 
 ::: voice-daughter
-Me: “Hmm... selection bias, information bias... Clinical research terminology is so confusing. But I definitely don’t want my survey to fail. I’ll write this down.”
-::: 
+"Hmmm. Selection bias, information bias...Clinical research really has its own language, and I don’t fully get it yet."
+:::
 ::::::::::::::::::::::::::::::::: 
 
+### This concludes the Study Design series. If you’d like to keep reading over your next cup of coffee, a glossary of terms in the story and further episodes are waiting:
 
-::: {.callout-note appearance="simple" title="Random error and bias"}
-Statistics is a discipline of uncertainty, but in clinical research it’s important to distinguish random error from bias.
-
-- Random error: variability centered around the truth. Decreases with larger sample size.
-
-- Bias: a systematic deviation from the truth. Does not disappear unless the study design and data collection are improved.
-
-A helpful analogy: Random error is like the spread of arrows around the bull’s-eye. Bias is when you’re consistently aiming off-center.
-
-The bias you observed in the Kaplan–Meier curve under competing risks is not random error.
-
-- Reducing random error = increase sample size.
-- Reducing bias = improve study design.
-
-That is one of the central themes of this Story.
-:::
-
-### This concludes the Study Design series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
-
+- [Statistical Terms in Plain Language](glossary.html)
 - [Reading a Paper over a Cup of Coffee]
 - [P-Value Explanations That Seem Plausible at First Glance]
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
 - [Understanding Confidence Intervals via Hypothetical Replications in R]
 - [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
-
